cmake_minimum_required(VERSION 3.23)
project(test_c__)

set(CMAKE_CXX_STANDARD 20)

add_executable(day1-part2.out "day1-part2.cpp")
add_executable(day2-part2.out "day2-part2.cpp")
add_executable(day3-part1 day3-part1.cpp)
add_executable(day4-part1 day4-part1.cpp)
add_executable(day4-part2 day4-part2.cpp)
add_executable(day5-part1 day5-part1.cpp)
add_executable(day5-part2 day5-part2.cpp)
